sign up update, email send, gajavakra name replaced by ganraj
